<resources>
    <string name="app_name">CS4084 Project</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click To Login</string>
    <string name="click_to_register">Click To Register</string>
    <string name="location">Location</string>
    <string name="post_image_description">Post Image</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="profile_image">Profile Image</string>
    <string name="hash">#</string>
    <string name="caption_hint">Tap To Enter Caption…</string>
    <string name="gallery_button">Gallery</string>
    <string name="camera_button">Camera</string>
    <string name="tag_location">Tag Your Location</string>
    <string name="upload_button">Upload</string>
    <string name="change_pw_button">Change Password</string>
    <string name="new_pw_hint">Enter New Password</string>
    <string name="old_pw_hint">Enter Old Password</string>
    <string name="change_email_button">Change Email</string>
    <string name="new_email_hint">Enter New Email</string>
    <string name="enter_password">Enter Password</string>


    <!-- Strings related to profile page -->
    <string name="profile_username">\@username</string>
    <string name="profile_followers_label">Followers</string>
    <string name="profile_following_label">Following</string>

    <string name="image_description">Post Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="name">Name</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_second_name">Enter Second Name</string>
    <string name="enter_nickname">Enter User Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="send_data">send Data</string>


</resources>