<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewPostFragment">

    <ImageView
        android:id="@+id/postImage"
        android:contentDescription="@string/post_image_description"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:src="@drawable/ic_post" />

    <EditText
        android:id="@+id/Caption"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/caption_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="24sp"
        android:autofillHints="@string/caption_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/gallery_button"
            android:textSize="24sp" />

        <Button
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/camera_button"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/small_border"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/location_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:textSize="35sp"
            android:text="@string/tag_location" />
    </LinearLayout>

    <Button
        android:id="@+id/uploadPost"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/upload_button"
        android:textSize="24sp" />

</LinearLayout>